# graph_cookbook

./: .gitignore  BFS_DFS_Shortest_Path.ipynb  Dockerfile  README.md  TD_BFS_DFS_ShortestPath.ipynb  TD_BFS_DFS_ShortestPath_EN.ipynb  TD_Exercices.ipynb  exercices.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: TD_BFS_DFS_ShortestPath-checkpoint.ipynb  TD_Exercices-checkpoint.ipynb
analysis/: enron_graph_analysis.ipynb  eve_graph_analysis.ipynb  trafic_network_analysis.ipynb
centrality/: README.md  centrality_cybersecurity.ipynb  centrality_social_network.ipynb  convergence_demo.ipynb
classification/: malware_classification_part_1.ipynb  td_malware_classification_part_2.ipynb  twitter_bot_classifier.ipynb  twitter_bot_classifier_correction.ipynb
community/: community_detection.ipynb  community_detection_tutorial.ipynb  friends_community_analysis.ipynb  got-s1-8-edges.csv  td_community_detection.ipynb
shortest_path/: README.md
src/analysis/: enron_graph_analysis.ipynb  process_ISOT_dataset.ipynb  trafic_network_analysis.ipynb
src/centrality/: centrality_social_network.ipynb  convergence_demo.ipynb
src/classification/: malware_classification.ipynb  malware_classification_correction.ipynb  malware_classification_part_1.ipynb  malware_classification_part_2.ipynb  twitter_bot_classifier.ipynb  twitter_bot_classifier_correction.ipynb
src/community/: community_detection.ipynb  community_detection_correction.ipynb  friends_community_analysis.ipynb
