[project]
name = "graph_cookbook"
version = "0.1.0"
description = "TD notebook on BFS, DFS and shortest path algorithms with Paris road network"
requires-python = ">=3.11"
dependencies = [
    "osmnx",
    "networkx",
    "plotly",
    "matplotlib",
    "numpy",
    "ipykernel",
    "geopandas",
    "streamlit",
    "scikit-learn",
    "opentsne",
    "pandas",
    "umap-learn",
    "karateclub",
    "pycaret",
    "tqdm",
]
