[project]
name = "graph_cookbook"
version = "0.1.0"
description = "TD notebook on BFS, DFS and shortest path algorithms with Paris road network"
requires-python = ">=3.11"
dependencies = [
    "osmnx",
    "networkx",
    "plotly",
    "matplotlib",
    "numpy",
    "ipykernel",
    "geopandas",
    "streamlit",
    "scikit-learn",
    "opentsne",
    "pandas",
    "umap-learn",
    "karateclub",
    "jupyterlab",
    "pycaret",
    "tqdm",
    "seaborn>=0.13.2",
    "facets-overview>=1.1.1",
    "protobuf>=6.33.4",
    "pynacl>=1.6.2",
    "pygwalker>=0.5.0.0",
    "runcell>=0.1.17",
    "ipywidgets>=8.1.8",
]
