[project]
name = "graph_cookbook"
version = "0.1.0"
description = "Notebooks on graph analysis"
requires-python = "==3.11.*"

dependencies = [
    # --- Core scientific stack ---
    "numpy<2.0",
    "pandas>=1.5,<2.3",
    "scipy<1.12",
    "joblib>=1.3.*,<1.5.*",
    "pyarrow==15.0.1",
    # --- Graphs & embeddings ---
    "networkx>=3.4,<3.6.1",
    "osmnx>=1.8,<2.0.*",
    "node2vec>=0.4.6",
    "karateclub>=1.2.2,<1.4",
    # --- ML ---
    "scikit-learn==1.4.2",
    "pycaret==3.3.0",
    "umap-learn>=0.5,<0.6",
    "opentsne==1.0.*",
    "optuna-integration[sklearn]>=4.7.0",
    # --- Geo ---
    "geopandas>=0.14,<1.1.*",
    # --- Notebooks & viz ---
    "jupyterlab==4.5.3",
    "ipykernel>=6.29,<7.1.*",
    "ipywidgets>=8.1,<9.0",
    "tqdm>=4.66,<5.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib==3.7.*",
    "plotly>=6.5.2",
    "seaborn>=0.13.2,<0.14",
    # --- Data exploration ---
    "pygwalker>=0.5.0.0,<0.6",
    "facets-overview>=1.1.1,<2.0",
    # --- Infra / stability fixes ---
    "protobuf>=4.25,<6.0",
    "pynacl>=1.6.2",
    "runcell>=0.1.17",
    "python-lsp-server>=1.14.0",
    "pyright>=1.1.408",
]

[project.optional-dependencies]
autogluon = [
    "autogluon>=1.4.0",
]

deep-learning = [
    "torch==2.7.*",
    "torch-geometric==2.7.*",
]
